<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/br_about"
    android:paddingLeft="@dimen/paddingLeft_About_Activity"
    android:paddingRight="@dimen/paddingRight_About_Activity"
    tools:context="com.example.rs.project_result_mob.Fragment_About_Us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_hl_Activity_About"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="@dimen/size_txt_hello" />

        <TextView
            android:id="@+id/txt_userName_ActivityAboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameUserAboutUs"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
    <!-- NOTE: Avatar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_avt_activity_about_us"
        android:gravity="center"
        android:layout_marginTop="@dimen/marginTop_avt_activity_about_us"
        android:layout_marginBottom="@dimen/marginBottom_avt_activity_about_us"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="@dimen/size_Image_ActivityAboutUs"
            android:src="@drawable/default_user" />
    </LinearLayout>
    <!--Thanks for us... -->
    <TextView
        android:gravity="center"
        android:layout_marginBottom="@dimen/marginBottom_thnks_ActivityAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/thankForUsed" />
    <!-- RATE -->
    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate" />
    <!-- Star -->
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/size_star_icon"
            android:layout_height="@dimen/size_star_icon"
            android:src="@mipmap/ic_star_rate" />

        <ImageView
            android:layout_width="@dimen/size_star_icon"
            android:layout_height="@dimen/size_star_icon"
            android:src="@mipmap/ic_star_rate" />

        <ImageView
            android:layout_width="@dimen/size_star_icon"
            android:layout_height="@dimen/size_star_icon"
            android:src="@mipmap/ic_star_rate" />

        <ImageView
            android:layout_width="@dimen/size_star_icon"
            android:layout_height="@dimen/size_star_icon"
            android:src="@mipmap/ic_star_rate" />

        <ImageView
            android:layout_width="@dimen/size_star_icon"
            android:layout_height="@dimen/size_star_icon"
            android:src="@mipmap/ic_star_rate" />
    </LinearLayout>
    <!-- About Us -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teamus" />

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/marginTop_nameTeam_activityAboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name1" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name2" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name3" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name4" />

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name5" />
        </LinearLayout>

        <!-- NOTE: Company -->

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/white"
                android:text="@string/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/marginTop_nameCompany_activityAboutUs"
                android:text="@string/company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
