<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_login_head_LoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/br_welcome"

    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <DigitalClock
            android:id="@+id/digital_LoginActivity"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:textColor="@color/clock"
            android:textSize="@dimen/fontSize_clock"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_txt_wel..." />
        <!-- LOGO TEXT -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:layout_marginTop="@dimen/marginTop_logoText_parent"
            android:gravity="center">


            <TextView
                android:id="@+id/txtLogo1_LoginActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/HOCHIMINH"
                android:textColor="@color/white"
                android:textSize="@dimen/fontSize_txt_HCMC..."
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLogo2_LoginActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_txt_att_parent"
                android:gravity="center"
                android:text="@string/Attractions"
                android:textColor="@color/white"
                android:textSize="@dimen/fontSize_txt_att" />

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:textSize="24sp"
            android:gravity="right|center"
            android:layout_marginRight="20dp"
            android:text="@string/skip"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <!--<TextView-->
        <!--android:text="@string/txtSkip"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
</LinearLayout>


