<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/br_city_safety"
    android:paddingLeft="@dimen/paddingLeft_city_safety"
    android:paddingTop="@dimen/paddingTop_city_safety"
    tools:context="com.example.rs.project_result_mob.Fragment_City_Safely">

    <LinearLayout
        android:id="@+id/item_city_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="@dimen/size_icon_city_oveview"
            android:layout_height="@dimen/size_icon_city_oveview"
            android:src="@mipmap/ic_city_over_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginLeft_txt_icon_item"
            android:text="@string/city_overview"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_text_item"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/item_arrival"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_city_overview"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="@dimen/size_icon_city_oveview"
            android:layout_height="@dimen/size_icon_city_oveview"
            android:src="@mipmap/ic_arrival" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginLeft_txt_icon_item"
            android:text="@string/arrival"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_text_item" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/item_getting_around"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_arrival"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="@dimen/size_icon_city_oveview"
            android:layout_height="@dimen/size_icon_city_oveview"
            android:src="@mipmap/ic_getting_around" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginLeft_txt_icon_item"
            android:text="@string/getting_around"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_text_item" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/item_safety"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_getting_around"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="@dimen/size_icon_city_oveview"
            android:layout_height="@dimen/size_icon_city_oveview"
            android:src="@mipmap/ic_safety" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginLeft_txt_icon_item"
            android:text="@string/safety"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_text_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_health"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_safety"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="@dimen/size_icon_city_oveview"
            android:layout_height="@dimen/size_icon_city_oveview"
            android:src="@mipmap/ic_health" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginLeft_txt_icon_item"
            android:text="@string/health"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_text_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_health"
        android:clickable="true"
        android:focusable="true"
        android:gravity="start"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="@dimen/size_icon_city_oveview"
            android:layout_height="@dimen/size_icon_city_oveview"
            android:src="@mipmap/ic_calendar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/marginLeft_txt_icon_item"
            android:text="@string/calendar"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_text_item" />
    </LinearLayout>
</LinearLayout>
