<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.example.rs.project_result_mob.LoginActivity">

    <ImageView
        android:id="@+id/background_main"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/br_login" />


    <LinearLayout
        android:id="@+id/layout_button_LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/marginBottom_button">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marginBottom_button">

            <Button
                android:id="@+id/btnLoginGoogle_LoginActivity"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:background="@drawable/btn_login_gg"
                android:drawableLeft="@drawable/search"
                android:paddingLeft="20dp"
                android:text="@string/lginGoogle"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/fontSize_btn"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnLoginFaceBook_LoginActivity"
                android:layout_width="@dimen/width_button"
                android:layout_height="@dimen/height_button"
                android:background="@drawable/btn_login_fb"
                android:text="@string/lginFacebook"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/fontSize_btn"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/facebook" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_or_LoginActivity"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginTop_view"
            android:orientation="horizontal">

            <View
                android:layout_width="@dimen/size_view"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/view_login_activity" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_LR_or"
                android:layout_marginRight="@dimen/margin_LR_or"
                android:text="@string/or"
                android:textColor="@color/txtOr"
                android:textSize="@dimen/fontSize_or"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/size_view"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/view_login_activity" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLoginUser_LoginActivity"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginBottom_button"
            android:background="@color/button_login_user"
            android:text="@string/lginUser"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/fontSize_btn"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>

